Adjust logo to stop menu wrapping before collapsing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@ footer a{
 
 #navbar-logo {
     font-family: 'Exo 2', sans-serif;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
 
 }
